# quart_blog_1

./: .gitignore  blog.db  main.py  pyproject.toml
src/quart_blog/: __init__.py
src/quart_blog/db/: __init__.py  config.py  mixins.py
src/quart_blog/db/models/: __init__.py  author.py  post.py
src/quart_blog/routes/: __init__.py  author.py  errors.py  post.py
src/quart_blog/templates/: create_post.html  edit_post.html  posts.html
