[tool.poetry]
name = "quart-blog"
version = "0.1.0"
description = ""
authors = ["Acutapugione <acuta.pugione@gmail.com>"]
readme = "README.md"
packages = [{include = "quart_blog", from = "src"}]

[tool.poetry.scripts]
start = "quart_blog:run"

[tool.poetry.dependencies]
python = "^3.12"
quart = "^0.19.6"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
